--- a/app/views/match_invitations/index_without_conflict.html.erb
+++ b/app/views/match_invitations/index_without_conflict.html.erb
@@ -8,7 +8,7 @@
   <table class="list">
     <% @mis.each do |mi|%>
       <tr>
-        <td><%= render(:partial => 'shared/team_icon', :object => mi.host_team)%></td>
+        <td><%= team_icon(mi.host_team)%></td>
         <td style="width:100%">
           <table class="match_invitation_list">
           <tr>
@@ -72,7 +72,7 @@
           <%end%>
           </table>
         </td>
-        <td><%= render(:partial => 'shared/team_icon', :object => mi.guest_team)%></td>
+        <td><%= team_icon(mi.guest_team)%></td>
       </tr>
     <%end%>
   </table>
