--- a/app/views/team_join_invitations/new_by_user_id.html.erb
+++ b/app/views/team_join_invitations/new_by_user_id.html.erb
@@ -8,7 +8,7 @@
 
     <%@teams.each do |team|%>
       <div class="icon_select">
-        <%= render(:partial => 'shared/team_icon', :object => team)%>
+        <%= team_icon(team)%>
         <div class="input"><%= check_box_tag "teams_id[]", team.id%></div>
       </div>
     <%end%>
