--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -13,7 +13,7 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= link_to "返回训练首页", training_view_path(@training) %>
+      > <%= link_to "返回训练详情", training_path(@training) %>
     </li>
   </ul>
 </div>
