--- a/app/views/calendar/show_a_day.html.erb
+++ b/app/views/calendar/show_a_day.html.erb
@@ -4,21 +4,20 @@
 
 <div id="wide_left_content" class="sect">
   <h2><%= h @title%></h2>
-  <%= render(:partial => 'shared/training_list', :object => @trainings, :locals => {:display_team => @team_display})%>
-  <%= render(:partial => 'shared/match_list', :object => @matches, :locals => {:display_team => @team_display})%>
+  <%= render :partial => 'shared/activities', :object => @activities, :locals=>{:start_date=> @date, :end_date=> @date.tomorrow}%>
 </div>
 
 <div id="narrow_right_content" class="sect">
-  <h2>查看其它日程安排</h2>
+  <h2>查看其它活动</h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= day_calendar_link "上一天的日程安排", @date.yesterday, @user || @team%>
+      > <%= day_calendar_link "上一天的活动", @date.yesterday, @user || @team%>
     </li>
     <li>
-      > <%= day_calendar_link "下一天的日程安排", @date.tomorrow, @user || @team%>
+      > <%= day_calendar_link "下一天的活动", @date.tomorrow, @user || @team%>
     </li>
     <li class="seperate">
-      > <%= month_calendar_link "本月的日程安排", @date, @user || @team%>
+      > <%= month_calendar_link "本月的活动", @date, @user || @team%>
     </li>
     <li class="seperate">
       > <%= link_to "返回个人首页", user_view_path(@user) if @user%>
