--- a/app/views/layouts/_header_setting.html.erb
+++ b/app/views/layouts/_header_setting.html.erb
@@ -6,12 +6,12 @@
         <li><%= link_to("首页", user_view_path(current_user))%></li>
         <li><%= link_to("朋友", user_friend_relations_path(current_user))%></li>
         <li><%= link_to("球队", user_team_joins_path(current_user))%></li>
-        <li><%= day_calendar_link('日程', Time.now, current_user)%></li>
+        <li><%= day_calendar_link('活动', Time.now, current_user)%></li>
         <li><%= link_to("信箱", messages_path)%></li>
         <li><%= link_to("设置", edit_user_path(current_user))%></li>
       </ul>
     </span>
-    <%= link_to "踢球去", '#' %>&nbsp;&nbsp;| &nbsp;&nbsp;
+    <%= link_to "踢球去", new_play_path %>&nbsp;&nbsp;| &nbsp;&nbsp;
     <%= link_to "退出", session_path(0), :method=>:delete %>
   <%else%>
     <%= link_to "登录", new_session_path %>&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;
