--- a/app/views/match_joins/edit.html.erb
+++ b/app/views/match_joins/edit.html.erb
@@ -8,7 +8,7 @@
   
     <%for mj in @player_mjs%>
      <tr>
-        <td><%= render(:partial => 'shared/user_icon', :object => mj.user)%></td>
+        <td><%= user_icon(mj.user)%></td>
         <td><%= select_tag "mj[#{mj.id}][position]",
             options_for_select(Team::FORMATION_POSITIONS.map {|p| [fomation_position_text(p), p]},mj.position)%>        
         </td>
