--- a/app/views/plays/new.html.erb
+++ b/app/views/plays/new.html.erb
@@ -1,34 +1,46 @@
-<div id="wide_left_content" class="sect">
-  <h2><%=h @title%></h2>
-  <%= error_messages_for :play %>
-  <% form_for @play do |f| %>
-
 <%content_for(:javascript) do%>
   <%= javascript_include_tag province_city_select_url %>
   <%= javascript_include_tag football_ground_select_url %>
 <%end%>
 
-  <p><label>日期</label><br/>
-  <%= select_date @default_start_time, :prefix => "start_time", :start_year => Date.today.year, :end_year => Date.today.year+1, :use_month_numbers => true %></p>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%= error_messages_for :play %>
+  <% form_for @play do |f| %>
+    <p><label>哪天去</label><br/>
+    <%= select_date @default_start_time, :prefix => "start_time", :start_year => Date.today.year, :end_year => Date.today.year+1, :use_month_numbers => true %></p>
 
-  <p><label>开始时间</label><br/>
-  <%= select_hour @default_start_time,:prefix => "start_time" %>
-  <%= select_minute @default_start_time,:prefix => "start_time", :minute_step=>15 %></p>
+    <p><label>几点去</label><br/>
+    <%= select_hour @default_start_time,:prefix => "start_time" %>
+    <%= select_minute @default_start_time,:prefix => "start_time", :minute_step=>15 %></p>
 
-  <p><label>结束时间</label><br/>
-  <%= select_hour @default_end_time,:prefix => "end_time" %>
-  <%= select_minute @default_end_time,:prefix => "end_time", :minute_step=>15 %></p>
+    <p><label>几点走</label><br/>
+    <%= select_hour @default_end_time,:prefix => "end_time" %>
+    <%= select_minute @default_end_time,:prefix => "end_time", :minute_step=>15 %></p>
 
-  <div class="location_input">
-    <p class="football_ground_input"><label for="football_ground_id">选择场地</label><br/>
-      <%= f.football_ground_select :football_ground_id,nil,current_user.city%>    
-      <%= link_to "提交新场地", new_football_ground_path(:back_uri => request.request_uri)%>
-    </p>
-    <p class="location_text_input">
-      <%= f.text_field :location, :value=> @play.football_ground_id.nil? ? @play.location : '' %> （如果场地不在列表中请在这里填写）
-    </p>
-  </div>
+    <div class="location_input">
+      <p class="football_ground_input"><label for="football_ground_id">选一块场地</label><br/>
+        <%= f.football_ground_select :football_ground_id, 'city', current_user.city%>    
+        <%= link_to "提交新场地", new_football_ground_path(:back_uri => request.request_uri)%>
+      </p>
+      <p class="location_text_input">
+        <%= f.text_field :location, :value=> @play.football_ground_id.nil? ? @play.location : '' %> （如果场地不在列表中请在这里填写）
+      </p>
+    </div>
 
-  <p><%= submit_tag '创建' %></p>
+    <p><%= submit_tag '确认' %></p>
   <% end %>
 </div>
+
+<div id="narrow_right_content">
+  <div class="sect">
+    <h2></h2>
+    <ul class="sidebar_menu">
+      <li>
+        > <%= link_to "返回个人首页", user_view_path(@user) %>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="clearBoth"></div>
