--- a/app/views/posts/_sidebar_menu.html.erb
+++ b/app/views/posts/_sidebar_menu.html.erb
@@ -1,26 +1,28 @@
 <ul class="sidebar_menu"> 
   <% if logged_in? && @training && current_user.is_team_member_of?(@training.team)%>
     <li>
-      > <%= link_to '发言', new_training_post_path(@training) %>
+      > <%= link_to '针对本次训练发言', new_training_post_path(@training) %>
     </li>
-  <%end%>
-  <% if logged_in? && !@training && @team && current_user.is_team_member_of?(@team) %>
+  <%else%>
     <li>
       > <%= link_to '发言', new_team_post_path(@team) %>
     </li>
   <%end%>
+  <% if @training %>
+    <li>
+    > <%= link_to '本次训练相关的讨论', training_posts_path(@training) %>
+    </li>
+  <%end%>
   <li>
-    > <% if @training %>
-      <%= link_to '训练讨论区', training_posts_path(@training) %>
-    <% elsif @team %>
-      <%= link_to '队伍讨论区', team_posts_path(@team) %>
-    <%end%>
+  > <%= link_to '队伍讨论区', team_posts_path(@team) %>
   </li>
+    
   <li class="seperate">
-    > <% if @training %>
-      <%= link_to '返回训练首页', training_view_path(@training) %>
-    <% elsif @team %>
-      <%= link_to '返回队伍首页', team_view_path(@team) %>
+    <% if @training %>
+      > <%= link_to '返回训练详情', training_path(@training) %>
+  </li>
+  <li>
     <%end%>
+    > <%= link_to '返回队伍首页', team_view_path(@team) %>
   </li>
 </ul>
