--- a/app/views/shared/_highlight_calendar.html.erb
+++ b/app/views/shared/_highlight_calendar.html.erb
@@ -1,54 +1,69 @@
 <div class="calendar">
-  <%3.times do |i|%>
-  <%tmp_length = 0 %>
-  <%if trainings[date.strftime("%Y-%m-%d")] != nil %>
-    <%tmp_length = trainings[date.strftime("%Y-%m-%d")].length%>
-  <%end%>
-  <div class="normalDateDiv bigDateDiv <%= tmp_length > 2 ? 'hasManyActivitiesDiv' : (tmp_length > 0 ? 'hasActivityDiv' : '')%>">
-    <div class="bigMonthDayDiv">
-      <span class="bigMonthDaySpan"><%=day_calendar_link(date.day, date, @user || @team)%></span>
-      <span class="bigWeekDaySpan"><%=wday_text date.wday%></span>
-    </div>
-    <div class="dateContent">
-      <% dts = trainings[date.strftime("%Y-%m-%d")] %>
-      <% if !dts.nil?%>
-      <% dts.slice(0,3).each do |t| %>
-        <div class="trainingContentSpan">
-          <%= link_to image_tag('training_icon.gif'), training_view_path(t)%>
-          <%= "#{t.start_time.strftime("%H:%M")}-#{t.end_time.strftime("%H:%M")}"%>
-          <%= link_to '训练', training_view_path(t)%>
-        </div>
-      <%end%>
-      <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if dts.length > 3%>
-      <%end%>
-    </div>
-  </div>
-  <%if i==1%>
-    <div class="normalDateDiv monthAndYearDiv">
-      <%= month_calendar_link(date.strftime("%Y-%m"), date, @user || @team)%>
-    </div>
-  <%end%>
-  <% date = date.tomorrow %>
-  <%end%>
-  <%15.times do |i|%>
-    <%tmp_length = 0 %>
-    <%if trainings[date.strftime("%Y-%m-%d")] != nil %>
-      <%tmp_length = trainings[date.strftime("%Y-%m-%d")].length%>
-    <%end%>
-    <div class="normalDateDiv <%= tmp_length > 3 ? 'hasManyActivitiesDiv' : (tmp_length > 0 ? 'hasActivityDiv' : '')%>">
+  <%3.times do |i|
+    act_a_day = activities[date.strftime("%Y-%m-%d")].nil? ? [] : 
+        (activities[date.strftime("%Y-%m-%d")].sort_by{|t| t.start_time}) %>
+    <div class="normalDateDiv bigDateDiv <%= act_a_day.length > 2 ? 'hasManyActivitiesDiv' : (act_a_day.length > 0 ? 'hasActivityDiv' : '')%>">
       <div class="bigMonthDayDiv">
         <span class="bigMonthDaySpan"><%=day_calendar_link(date.day, date, @user || @team)%></span>
         <span class="bigWeekDaySpan"><%=wday_text date.wday%></span>
       </div>
       <div class="dateContent">
-        <% dts = trainings[date.strftime("%Y-%m-%d")] %>
-        <% if !dts.nil?%>
-        <% dts.slice(0..6).each do |t| %>
-          <span class="trainingContentSpan">
-            <%= link_to image_tag('training_icon.gif'), training_view_path(t)%>
-          </span>
+        <% if act_a_day.length > 0 %>
+          <table class="activityContent">
+          <%(act_a_day.length>3 ? 3 : act_a_day.length).times do |j|
+            act = act_a_day[j]
+            if act.class == Training
+              link = training_path(act)
+              img_link = training_icon_link(act)
+            elsif act.class == Match
+              link = match_view_path(act)
+              img_link = match_icon_link(act)
+            elsif act.class == Play
+              link = play_path(act)
+              img_link = play_icon_link(act)
+            end%>
+              <tr>
+                <td><%= img_link%></td>
+                <td><%= "#{act.start_time.strftime("%H:%M")}-#{act.end_time.strftime("%H:%M")}"%></td>
+                <td><%= link_to '详情', link%></td>
+             </tr>
+          <%end%>
+          </table>
+          <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 3%>
         <%end%>
-        <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if dts.length > 6%>
+      </div>
+    </div>
+    <%if i==1%>
+      <div class="normalDateDiv monthAndYearDiv">
+        <%= month_calendar_link(date.strftime("%Y-%m"), date, @user || @team)%>
+      </div>
+    <%end%>
+    <% date = date.tomorrow %>
+  <%end%>
+  <%(days-3).times do |i|
+    act_a_day = activities[date.strftime("%Y-%m-%d")].nil? ? [] : 
+        (activities[date.strftime("%Y-%m-%d")].sort_by{|t| t.start_time}) %>
+    <div class="normalDateDiv <%= act_a_day.length > 2 ? 'hasManyActivitiesDiv' : (act_a_day.length > 0 ? 'hasActivityDiv' : '')%>">
+      <div class="bigMonthDayDiv">
+        <span class="bigMonthDaySpan"><%=day_calendar_link(date.day, date, @user || @team)%></span>
+        <span class="bigWeekDaySpan"><%=wday_text date.wday%></span>
+      </div>
+      <div class="dateContent">
+        <% if act_a_day.length > 0
+           (act_a_day.length>6 ? 6 : act_a_day.length).times do |j|
+              act = act_a_day[j]
+              if act.class == Training
+                img_link = training_icon_link(act)
+              elsif act.class == Match
+                img_link = match_icon_link(act)
+              elsif act.class == Play
+                img_link = play_icon_link(act)
+              end%>
+            <span class="activityContent">
+              <%= img_link%>
+            </span>
+          <%end%>
+          <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 6%>
         <%end%>
       </div>
     </div>
