--- a/app/views/team_joins/index_user.html.erb
+++ b/app/views/team_joins/index_user.html.erb
@@ -6,19 +6,19 @@
 <div id="wide_left_content">
   <div class="sect">
     <h2>管理员</h2>
-    <%= render(:partial => 'shared/user_icon', :collection => @admin)%>
+    <%= user_icon(@admin)%>
     <div class="clearBoth"></div>
   </div>
 
   <div class="sect">
     <h2>队员</h2>
-    <%= render(:partial => 'shared/user_icon', :collection => @players)%>
+    <%= user_icon(@players)%>
     <div class="clearBoth"></div>
   </div>
 
   <div class="sect">
     <h2>其他成员</h2>
-    <%= render(:partial => 'shared/user_icon', :collection => @others)%>
+    <%= user_icon(@others)%>
     <div class="clearBoth"></div>
   </div>
 </div>
