--- a/app/views/team_joins/player_management.html.erb
+++ b/app/views/team_joins/player_management.html.erb
@@ -8,7 +8,7 @@
     <h2>队员名单</h2>
     <%@player_uts.each do |ut| %>
       <div style="float:left">
-        <%= render(:partial => 'shared/user_icon', :object => ut.user)%>
+        <%= user_icon(ut.user)%>
         <div>
           <span>首选位置: <%= position_text ut.user.premier_position%></span><br/><br/>
           <%=link_to("从队员名单去掉",team_join_path(ut, "ut[is_player]" => false, 
@@ -23,7 +23,7 @@
     <h2>可选的队员</h2>
     <%@other_uts.each do |ut| %>
       <div style="float:left">
-        <%= render(:partial => 'shared/user_icon', :object => ut.user)%>
+        <%= user_icon(ut.user)%>
         <div>
           <span>首选位置: <%= position_text ut.user.premier_position%></span><br/><br/>
           <%if ut.user.is_playable%>
