--- a/app/views/shared/_highlight_calendar.html.erb
+++ b/app/views/shared/_highlight_calendar.html.erb
@@ -16,7 +16,7 @@
               link = training_path(act)
               img_link = training_icon_link(act)
             elsif act.class == Match
-              link = match_view_path(act)
+              link = match_path(act)
               img_link = match_icon_link(act)
             elsif act.class == Play
               link = play_path(act)
