--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -15,7 +15,7 @@ div.calendar div.monthAndYearDiv {
     margin-left:5px; 
     margin-bottom:5px; 
     border:solid 1px #3D681A; 
-    background-color:#F3F4F5; 
+    background-color:#FCFDFE; 
     float:left;
 }
 
