--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -2,11 +2,11 @@
   <%= javascript_include_tag province_city_select_url %>
 <%end%>
 
+<p><label for="shortname">队名</label><br/>
+<%= f.text_field :shortname %></p>
+
 <p><label for="name">球队全称</label><br/>
 <%= f.text_field :name %></p>
-
-<p><label for="shortname">球队简称</label><br/>
-<%= f.text_field :shortname %></p>
 
 <p><label for="found_time">建队日期</label><br/>
 <%= f.date_select :found_time, :start_year=>1900, :end_year=>Date.today.year, :use_month_numbers => true %></p>
