--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -6,37 +6,9 @@
 <div id="wide_left_content">
   <div class="sect">
     <h2><%= h @title%></h2>
-    <div class="activity" style="border:none;">
-      <div class="activity_date">
-        <div class="day">
-          <%= month_calendar_link(@training.start_time.strftime('%m'), @training.start_time, @team)%>.<%= day_calendar_link(@training.start_time.strftime('%d'), @training.start_time, @team)%></div>
-        <div class="week"><%= wday_text @training.start_time.wday%></div>
-      </div>
-      <div class="activity_content">
-        队伍: <%= link_to(@training.team.shortname, team_view_path(@training.team.id))%>
-        <br/><br/>
-        时间: <%= @training.start_time.strftime('%H:%M')%>-<%= @training.end_time.strftime('%H:%M')%>
-        <br/><br/>
-        场地: <%= link_to_if !@training.football_ground_id.nil?, h(@training.location), football_ground_path(@training.football_ground_id)%>
-        <br/><br/>
-        <%if logged_in? %>
-          <%=link_to_if(@training.can_be_joined_by?(current_user), '我去', training_training_joins_path(@training), :method=>'post'){} %>
-          <%=link_to_if(@training.can_be_quited_by?(current_user), '我不去', training_training_join_path(@training, 0), :method=>'delete'){} %>
-        <%end%>
-        <%if logged_in?%> 
-          <div style="float:right">
-            <%if @training.can_be_modified_by?(current_user)%>
-              > <%=link_to '修改', edit_training_path(@training) %>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <%end%>
-            <% if @training.can_be_destroyed_by?(current_user) %>
-              > <%=link_to '取消', training_path(@training), :method=>'delete'%>
-            <%end%>
-          </div>
-        <%end%>
-      </div>
-      <div class="activity_icon">
-        <%= team_image_link @training.team, :class=>"icon" %>
-      </div>
+    <div class="activities">
+      <%=date_div_link @training.start_time, @team%>
+      <%= render :partial => 'shared/activity', :object => @training%>
       <div class="clearBoth"></div>
     </div>
   </div>
